# OrbitRx-Propagation-Monitor

./: .gitignore  OrbitRxMonitor.spec  README.md  RadioPropagationTracker.spec  START_HERE.txt  Setup Desktop.bat  _check.py  app.py  build.bat  build_exe.py  config.example.json  dx_spots_log.csv  export.json  generate_map.py  inspect_noaa.py  propagation_log.csv  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml  release.yml
desktop/OrbitRx/: README.txt
installer/: OrbitRxMonitor.iss
orbitrx/: __init__.py  alerts.py  cat.py  config.py  contests.py  dx.py  hamqsl.py  logger.py  main.py  map_renderer.py  paths.py  propagation.py  state.py  storage.py  update_checker.py  utils.py  weather.py
orbitrx/ui/: __init__.py  app.py  band_panel.py  controller.py  leaflet_map.py  map_widget.py  qt_app.py  rig_wizard.py  tk_app.py
packaging/: orbitrx.spec
scripts/: build.bat  build_exe.py  inspect_noaa.py  run_orbitrx.bat  setup_desktop.bat
src/orbitrx/: __init__.py  __main__.py  app.py  compat.py  config.py  paths.py
src/orbitrx/assets/: map.py
src/orbitrx/models/: __init__.py  context.py  state.py
src/orbitrx/services/: cat.py  dx_cluster.py  geolocation.py  logging.py  noaa.py  propagation.py
src/orbitrx/ui/: dialogs.py  history.py  main_window.py  map_canvas.py
tests/: test_dx.py  test_dx_parser.py  test_features_v5.py  test_prefix_map.py  test_propagation.py  test_utils.py  test_weather_fixtures.py
