[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitrx-propagation-monitor"
version = "5.0.0"
description = "HF propagation dashboard for ham radio operators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "matplotlib>=3.8",
    "PySide6>=6.6",
]

[project.optional-dependencies]
cat = ["pyserial>=3.5"]
ui = ["customtkinter>=5.2", "win10toast>=0.9"]
tray = ["pystray>=0.19"]
dev = ["pytest>=8.0", "mypy>=1.8"]
build = ["pyinstaller>=6.0"]
map = ["PySide6-Addons>=6.6"]

[project.scripts]
orbitrx = "orbitrx.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbitrx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
